--- a/myproject/myapp/templates/html/inicio.html
+++ b/myproject/myapp/templates/html/inicio.html
@@ -11,6 +11,7 @@
       src="https://kit.fontawesome.com/f6d6f5a997.js"
       crossorigin="anonymous"
     ></script>
+    <etiqueta id="id" class="class"> </etiqueta>
   </head>
   <body>
     <header>
@@ -35,7 +36,6 @@
         <h3>DESLIZA HACIA ABAJO PARA COMENZAR</h3>
       </div>
     </header>
-
     <main>
       <div id="productos">
         <ul class="product-list">
