--- a/myproject/myapp/templates/html/inicio.html
+++ b/myproject/myapp/templates/html/inicio.html
@@ -22,7 +22,7 @@
         </a> -->
         <div id="header">
           <div class="btn-header">
-              <a class="btn-h" id="btn-carrito" href="https://wa.me/3874890010" target="_blank">
+              <a class="btn-h" id="btn-carrito" href="{{ carrito.page }}" target="_blank">
                 <i class="fa-solid fa-cart-shopping" style="color: black"></i>
                 <div class="cuadro-informacion">CARRITO</div>
               </a>
