--- a/myproject/myapp/templates/html/carrito.html
+++ b/myproject/myapp/templates/html/carrito.html
@@ -6,6 +6,13 @@
     <title>Carrito</title>
 </head>
 <body>
-    <h2>{{ carrito.producto }}</h2>
+    <h1 style="text-transform: uppercase;">carrito de compra</h1>
+    <ul class="productos">
+        {% for producto in carrito %}
+        <li class="producto">
+            {{ producto }}
+        </li>
+        {% endfor %}
+    </ul>
 </body>
 </html>
