--- a/myproject/myapp/templates/html/inicio.html
+++ b/myproject/myapp/templates/html/inicio.html
@@ -53,8 +53,9 @@
               </ul>
             </div>
             <div class="c-footer">
-              <a href="/addSoli/" id="c-finish">Realizar Pedido</a>
+              <a href="/addSoli/" id="c-finish" style="display: block; width: 100%; padding: 10px; background-color: #4CAF50; color: #fff; text-align: center; text-decoration: none; border: none; cursor: pointer;">Realizar Pedido</a>
             </div>
+            
           </div>
         </section>
 
